tests/negative/neg_rule4_freed.safe
-- Test: neg_rule4_freed
-- Description: Dereference of an access value designating a deallocated object.
--   After scope exit of the owning variable, any remaining reference
--   to the designated object is dangling.
-- Clause: SAFE@4aecf21:spec/02-restrictions.md#2.3.4a.p102b:2ed757bd
-- Clause: SAFE@4aecf21:spec/02-restrictions.md#2.3.4a.p102b-diag:ddab22c8
-- Expected: REJECT dangling_reference

package Freed_Test is

   type Data is range 0 .. 100;
   type Data_Ptr is access Data;

   --  Escape_Reference: the borrow outlives the lender.
   --  Inner declares an owning pointer, borrows it to Outer_Ref,
   --  then the owning pointer goes out of scope (deallocated).
   --  Outer_Ref now dangles.
   function Escape_Reference return Integer is
      Outer_Ref : access Data;
   begin
      declare
         Owner : Data_Ptr = new (42 as Data);
      begin
         Outer_Ref = Owner;  -- borrow
      end;
      --  Owner has been deallocated; Outer_Ref is dangling.
      return Integer (Outer_Ref.all);  -- ERROR: dangling reference
   end Escape_Reference;

end Freed_Test;
